<resources>
    <string name="app_name"></string>
    <string name="tvTitulo">Green Beach</string>
    <string name="etEmail">Introduzca su Email</string>
    <string name="etPassword">Contraseña</string>
    <string name="btnLogear">Iniciar Sesión</string>
    <string name="msj_registrado">Se ha registrado</string>
    <string name="msj_no_registrado">No se ha podido registrar</string>
    <string name="msj_nodatos">No hay datos</string>
    <string name="msj_logado">Se ha Logueado</string>
    <string name="msj_no_accede">404 no found No se Puede loguear</string>
    <string name="msj_no_data">No se encontraron los datos</string>
    <string name="msj_pwd_length">Tiene que tener la contraseña mas de 6 digitos</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_RecuperarContraseña">¿Olvidaste tu contraseña? Pincha aqui para cambiarla</string>
    <string name="btn_Registrarse">Si no estas registrate aqui</string>
    <string name="lbl_forgot_password">Recuperación de Contraseña</string>
    <string name="forgot_password_msg">Si no recuerdas tu vieja contraseña, mete tu cuenta de email y se te enviara un correo para cambiar la contraseña</string>
    <string name="btn_reset_password">Confirmar</string>
    <string name="btn_back">Volver</string>
    <string name="email">Email</string>
    <string name="action_sign_in_short">Crear una cuenta</string>
    <string name="btn_link_to_login">No estas registrado? Registrate aquí.</string>
    <string name="prompt_password">Contraseña</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="btn_change">Boton Cambiar</string>
    <string name="btn_remove">Boton Remover</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="remove_user">Borrar Usuario</string>
    <string name="btn_sign_out">Boton Salir</string>
    <string name="email_id">Email</string>
    <string name="Email">Introduce tu Email</string>
    <string name="hintPs">Introduce la contraseña</string>
    <string name="btn_Registrar">¿No tienes una cuenta?Registrate Aquí.</string>
    <string name="User">USUARIO</string>
    <string name="txtCambiarPerfil">Editar Perfil</string>
    <string name="txtEventos">Eventos</string>
    <string name="txt">Usuario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tab_text_1">Noticia</string>
    <string name="tab_text_2">Evento</string>
    <string name="action_settings">Settings</string>
    <string name="btn_Iniciar">Iniciar</string>
    <string name="tv_Contacto">Tel: 644345454</string>
    <string name="ranklabel">"Rank : "</string>
    <string name="countrylabel">"Country : "</string>
    <string name="populationlabel">"Population : "</string>
    <string name="btn_volver">Volver</string>
    <string name="clave_playa">Playa</string>
    <string name="app_nombre">Green Beach</string>
    <string name="tv_diseniador">JinChengWeng</string>
    <string name="tv_claudMaster">Alejandro Huedo</string>
    <string name="tv_diseniador2">Daniel Sabagge</string>
    <string name="tv_scrumMaster">Fernando </string>
    <string name="tv_cargos1">Designer</string>
    <string name="tv_cargos2">ClaudMaster </string>
    <string name="tv_cargos3">Designer </string>
    <string name="tv_cargos4">ScrumMaster </string>
    <string name="KEY_PLAYA_SEL">PlayaSeleccionada</string>
    <string name="title_activity_maps">Map</string>
    <string name="tv_Inicio">Inicio</string>
    <string name="tv_Inicio2">Inicio2</string>
    <string name="tv_Inicio3">Inicio3</string>
    <string name="et_NombreEvento" />
    <string name="et_Ubicacion" />
    <string name="et_DescripcionEvento" />
    <string name="et_FechaInicio" />
    <string name="et_FechaFin" />
    <string name="tvvNombre">Nombre del Evento: %s</string>
    <string name="tvvDescripcion">Descripcion: %s</string>
    <string name="btn_CrearEvento">crear</string>
    <string name="btn_Cancelar">cancelar</string>
    <string name="btn_CargarFoto">Cargar Foto</string>
    <string name="btn_CriarEvento">Criar Evento</string>
    <string name="tvvNombre1">%s</string>
    <string name="tvvDescripcion1">%s</string>
</resources>
